docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesNodeAssignment__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AssignmentType__c</fullName>
        <label>Assignment Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesAssignmentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assignment Object</label>
        <referenceTo>sfsp__SalesAssignmentObject__c</referenceTo>
        <relationshipLabel>Sales Node Assignments</relationshipLabel>
        <relationshipName>SalesNodeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Assignments</relationshipLabel>
        <relationshipName>SalesNodeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sales Node Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>